<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    tools:context=".SecondActivity">

    <Button
        android:id="@+id/button"
        android:onClick="selectItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/Beras" />

    <Button
        android:id="@+id/button2"
        android:onClick="selectItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/Roti" />

    <Button
        android:id="@+id/button3"
        android:onClick="selectItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/Susu" />

    <Button
        android:id="@+id/button4"
        android:onClick="selectItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/Tepung" />

    <Button
        android:id="@+id/button5"
        android:onClick="selectItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/keju" />

    <Button
        android:id="@+id/button6"
        android:onClick="selectItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="Ayam" />

    <Button
        android:id="@+id/button7"
        android:onClick="selectItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/Gula" />

    <Button
        android:id="@+id/button8"
        android:onClick="selectItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/Garam" />

    <Button
        android:id="@+id/button9"
        android:onClick="selectItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/Minyak_Goreng" />
</LinearLayout>